--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>se.romram</groupId>
     <artifactId>relax</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -82,6 +82,29 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!--no longer executed in test phase. Run cobertura:cobertura to generate -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <instrumentation>
+                        <ignores>
+                            <ignore>test.package.if.needed.later.*</ignore>
+                        </ignores>
+                        <excludes>
+                            <!-- eg.: -->
+                            <exclude>javax/**/*.class</exclude>
+                        </excludes>
+                    </instrumentation>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check />
+                </configuration>
             </plugin>
         </plugins>
     </build>
